Modification de la visualisation pour prendre en compte regulier et irreguliers.

--- a/index.html
+++ b/index.html
@@ -537,6 +537,7 @@
                     <a href="revision_irregulier_verbes.html" class="dropdown-item">Verbes irréguliers</a>
                     <a href="revision_regulier_verbes.html" class="dropdown-item">Verbes réguliers</a>
                     <a href="revision_positions.html" class="dropdown-item">Positions spatiales</a>
+                    <a href="visualiseur_verbes.html" class="dropdown-item">Tous les verbes</a>
                     </div>
             </div>
             <a href="admin.html" class="navbar-link" id="loginBtn" style="background: #ffc107; color: #333;">🔐 Connexion</a>
