--- a/revision_positions.html
+++ b/revision_positions.html
@@ -7,6 +7,44 @@
     <link rel="stylesheet" href="styles.css">
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYnaelzF3AanXmOGDG8j9kv3GyETYf1Js"></script>
     <style>
+        /* BOUTON DE RETOUR */
+        .back-btn {
+            position: fixed;
+            top: 20px;
+            left: 20px;
+            padding: 12px 20px;
+            background: white;
+            color: #667eea;
+            border: 2px solid #667eea;
+            border-radius: 8px;
+            font-size: 1em;
+            font-weight: 600;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            z-index: 1000;
+            text-decoration: none;
+        }
+
+        .back-btn:hover {
+            background: #667eea;
+            color: white;
+            transform: translateY(-2px);
+            box-shadow: 0 6px 15px rgba(102, 126, 234, 0.4);
+        }
+
+        .back-btn:active {
+            transform: translateY(0);
+        }
+
+        @media (max-width: 600px) {
+            .back-btn {
+                padding: 10px 16px;
+                font-size: 0.9em;
+            }
+        }
+
+        
         .positions-container {
             display: grid;
             grid-template-columns: 1fr 1fr;
@@ -221,11 +259,11 @@
     </style>
 </head>
 <body>
+    <a href="index.html" class="back-btn">← Retour</a>
     <nav class="navbar">
         <div class="navbar-content">
             <h1>📚 FR/NL</h1>
             <div class="navbar-buttons">
-                <a href="index.html" class="navbar-link">🏠 Accueil</a>
             </div>
         </div>
     </nav>
