--- a/revision_vocabulaire.html
+++ b/revision_vocabulaire.html
@@ -6,6 +6,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <style>
+        /* BOUTON DE RETOUR */
+        .back-btn {
+            position: fixed;
+            top: 20px;
+            left: 20px;
+            padding: 12px 20px;
+            background: white;
+            color: #667eea;
+            border: 2px solid #667eea;
+            border-radius: 8px;
+            font-size: 1em;
+            font-weight: 600;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            z-index: 1000;
+            text-decoration: none;
+        }
+
+        .back-btn:hover {
+            background: #667eea;
+            color: white;
+            transform: translateY(-2px);
+            box-shadow: 0 6px 15px rgba(102, 126, 234, 0.4);
+        }
+
+        .back-btn:active {
+            transform: translateY(0);
+        }
+
+        @media (max-width: 600px) {
+            .back-btn {
+                padding: 10px 16px;
+                font-size: 0.9em;
+            }
+        }
+
+        
         .header-section {
             display: flex;
             justify-content: space-between;
@@ -304,6 +342,7 @@
     </style>
 </head>
 <body>
+    <a href="index.html" class="back-btn">← Retour</a>
     <nav class="navbar">
         <div class="navbar-content">
             <h1>📚 FR/NL</h1>
@@ -311,7 +350,6 @@
                 <span id="navTitle" style="font-size: 1.1em; font-weight: 600; color: white;">Révision du vocabulaire (NL → FR)</span>
             </div>
             <div class="navbar-buttons">
-                <a href="index.html" class="navbar-link">🏠 Accueil</a>
             </div>
         </div>
     </nav>
