--- a/revision_positions.html
+++ b/revision_positions.html
@@ -532,9 +532,9 @@
 
             // Mettre à jour l'interface
             currentQuestion = { city1, city2, bearing };
-            document.getElementById('cityName').textContent = city1.nom + ' (1) 🔵';
+            document.getElementById('cityName').textContent = '';
             document.getElementById('questionText').innerHTML = 
-                `<strong>${city2.nom}</strong> (2 🔴) ligt <span style="font-size: 1.3em; font-weight: bold; color: var(--primary);">........................</span> <strong>${city1.nom}</strong>. ?`;
+                `<strong>${city2.nom}</strong> (2 🔴) ligt <span style="font-size: 1.3em; font-weight: bold; color: var(--primary);">........................</span> <strong>${city1.nom}</strong> (1) 🔵. ?`;
 
             // Afficher les options
             const optionsContainer = document.getElementById('optionsContainer');
