--- a/generateur.html
+++ b/generateur.html
@@ -2,10 +2,13 @@
 <html lang="fr">
 <head>
 <meta charset="UTF-8">
+<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+<meta http-equiv="Pragma" content="no-cache">
+<meta http-equiv="Expires" content="0">
 <title>Générateur de fiche NL</title>
 <meta name="google-signin-client_id" content="639970630190-dbtusqa5kb93jdthsr3413ms7t235anl.apps.googleusercontent.com">
 
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="styles.css?v=1.0.0">
 </head>
 
 <body>
