Ajout d'un versionning pour rafraichir le cache chez les lecteurs

--- a/revision_positions.html
+++ b/revision_positions.html
@@ -8,6 +8,7 @@
     <title>Exercice Positions Spatiales (NL)</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css?v=1.0.0">
+    <script src="version.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYnaelzF3AanXmOGDG8j9kv3GyETYf1Js"></script>
     <style>
         /* BOUTON DE RETOUR */
