--- a/admin.html
+++ b/admin.html
@@ -9,6 +9,7 @@
     <title>Admin - Kortes nieuwsartikelen</title>
 
     <link rel="stylesheet" href="styles.css?v=1.0.0">
+    <script src="version.js"></script>
 </head>
 
 <body>
