--- a/admin_vocabulaire.html
+++ b/admin_vocabulaire.html
@@ -8,6 +8,7 @@
     <title>Gestion du vocabulaire</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css?v=1.0.0">
+    <script src="version.js"></script>
 </head>
 <body>
     <nav class="navbar">
