--- a/generateur.html
+++ b/generateur.html
@@ -9,6 +9,7 @@
 <meta name="google-signin-client_id" content="639970630190-dbtusqa5kb93jdthsr3413ms7t235anl.apps.googleusercontent.com">
 
 <link rel="stylesheet" href="styles.css?v=1.0.0">
+<script src="version.js"></script>
 </head>
 
 <body>
