--- a/revision_heures.html
+++ b/revision_heures.html
@@ -8,6 +8,7 @@
     <title>Révision des heures (NL)</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css?v=1.0.0">
+    <script src="version.js"></script>
     <style>
         /* BOUTON DE RETOUR */
         .back-btn {
