--- a/revision_imparfait.html
+++ b/revision_imparfait.html
@@ -8,6 +8,7 @@
     <title>Révision Imparfait NL</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css?v=1.0.0">
+    <script src="version.js"></script>
     <style>
         .imparfait-wrapper {
             display: grid;
