--- a/revision_regulier_verbes.html
+++ b/revision_regulier_verbes.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Révision Verbes Réguliers NL</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css?v=1.0.0">
+    <script src="version.js"></script>
     <style>
         * {
             margin: 0;
