--- a/visualiseur_verbes.html
+++ b/visualiseur_verbes.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Visualiseur Verbes Irréguliers</title>
     <link rel="stylesheet" href="styles.css?v=1.0.0">
+    <script src="version.js"></script>
     <style>
         * {
             margin: 0;
