--- a/revision_prepositions_spatiales.html
+++ b/revision_prepositions_spatiales.html
@@ -390,13 +390,28 @@
         }
 
         .accordion-icon-item {
-            font-size: 1.3em;
             opacity: 0.9;
             transition: opacity 0.3s ease;
+            display: inline-flex;
+            align-items: center;
+            gap: 5px;
+            font-size: 0.9em;
+            padding: 5px 9px;
+            background: rgba(255, 255, 255, 0.15);
+            border-radius: 4px;
+            margin: 0 3px;
+            font-weight: 500;
+            white-space: nowrap;
+        }
+
+        .accordion-icon-emoji {
+            font-size: 1.15em;
+            flex-shrink: 0;
         }
 
         .accordion-header:hover .accordion-icon-item {
             opacity: 1;
+            background: rgba(255, 255, 255, 0.25);
         }
 
         .accordion-header:hover {
@@ -698,7 +713,7 @@
                 header.innerHTML = `
                     <span class="accordion-title">${icon} ${prep.preposition}</span>
                     <div class="accordion-icons">
-                        ${visuals.map(v => `<span class="accordion-icon-item" title="${v.text}">${v.icon}</span>`).join('')}
+                        ${visuals.map(v => `<span class="accordion-icon-item"><span class="accordion-icon-emoji">${v.icon}</span> ${v.text}</span>`).join('')}
                     </div>
                     <span class="accordion-toggle">▼</span>
                 `;
@@ -965,7 +980,7 @@
                 header.innerHTML = `
                     <span class="accordion-title">${icon} ${prep.preposition}</span>
                     <div class="accordion-icons">
-                        ${visuals.map(v => `<span class="accordion-icon-item" title="${v.text}">${v.icon}</span>`).join('')}
+                        ${visuals.map(v => `<span class="accordion-icon-item"><span class="accordion-icon-emoji">${v.icon}</span> ${v.text}</span>`).join('')}
                     </div>
                     <span class="accordion-toggle">▼</span>
                 `;
